# GASC

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.c
src/compiler/: AST.c  AST.h  lexer.c  lexer.h  parser.c  parser.h  tokens.h
